sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var j:Int
      ^AlgInsertionSort:4: error: local variables must be initialized
  var j:Int
      ^AlgInsertionSort:8: error: not found: value gatValeur
    while (gatValeur(j)>v){
           ^